create github pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                          <img src="assets/images/-3-122x121.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://mobirise.com">russiantrip</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://russiantrip.cf">russiantrip</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source website builder</a></section><section class="mbr-section content5 cid-qOYc1Jx1sX mbr-parallax-background" id="content5-1r">
+<section class="engine"><a href="https://mobirise.ws/n">free website creator app</a></section><section class="mbr-section content5 cid-qOYc1Jx1sX mbr-parallax-background" id="content5-1r">
 
     
 
@@ -174,8 +174,7 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-md-8">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-5"><em>
-                FILM SCRIPT</em></h1>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-5"><font color="#a833d0"><em>Two students</em></font></h1>
             
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">EXT. CAMPUS - DAY
 <br>Two students are taking PE exams. They are about to run 100 meters. They are waiting for a signal from the coach and ready to run. The first student turns back and saw two POLICEMEN walking near them. Just for a laugh, he shouts to his fellow student so that everyone else could hear him: <br>
