create github pages

--- a/page1.html
+++ b/page1.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="header9 cid-qPdlnfxtMX" id="header9-4l">
+<section class="engine"><a href="https://mobirise.ws/b">best website creator</a></section><section class="header9 cid-qPdlnfxtMX" id="header9-4l">
 
     
 
