--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-primary display-4" href="page1.html">About the project</a>
+                    <a class="nav-link link text-primary display-4" href="page2.html#header9-4s">About the project</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="mbr-section content5 cid-qOYc1Jx1sX" id="content5-1r">
+<section class="engine"><a href="https://mobirise.ws/h">make free website</a></section><section class="mbr-section content5 cid-qOYc1Jx1sX" id="content5-1r">
 
     
 
