--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html">About this project</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="page1.html">About this project</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best free website creator</a></section><section class="mbr-section content5 cid-qOYc1Jx1sX" id="content5-1r">
+<section class="engine"><a href="https://mobirise.ws/p">open source website creator</a></section><section class="mbr-section content5 cid-qOYc1Jx1sX" id="content5-1r">
 
     
 
