--- a/page2.html
+++ b/page2.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="mbr-section content5 cid-qPgF240fNT" id="content5-57">
+<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="mbr-section content5 cid-qPgF240fNT" id="content5-57">
 
     
 
