create github pages

--- a/page1.html
+++ b/page1.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">how to build own website</a></section><section class="header3 cid-qPp6XaUEqB" id="header3-c8">
+<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="header3 cid-qPp6XaUEqB" id="header3-c8">
 
     
 
