create github pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="header1 cid-qPMrsNxMcb" id="header1-kw">
+<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="header1 cid-qPSvVGPpv2" id="header1-lx">
 
     
 
@@ -65,8 +65,8 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5"><strong>CHAPTER 33:&nbsp;
-</strong><div><strong>Football match</strong></div></h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5"><font color="#a833d0"><strong>CHAPTER 33: 
+</strong></font><div><font color="#a833d0"><strong>Football match</strong></font></div></h3>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-7">Yekaterinburg arena is the largest sports facility in the city. Recently a new reconstruction has been carried out in order to bring the stadium in compliance with FIFA requirements for 2018 World Cup Russia including installation of 35 000 seats. After the championship, temporary seats will be disassembled and the capacity of the stadium will go down to 25 000 spectators. 
 <br>
 <br>15/04/18<strong><br></strong></p>
