create github pages

--- a/page5.html
+++ b/page5.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="header1 cid-qPMYKivl0n" id="header1-lk">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop site maker</a></section><section class="header1 cid-qPSz9YEFVE" id="header1-m2">
 
     
 
@@ -65,8 +65,8 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5"><strong>CHAPTER 29:&nbsp;
-</strong><div><font color="#a833d0"><strong>Peter's rock</strong></font></div></h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5"><font color="#a833d0"><strong>CHAPTER 29: 
+</strong></font><div><font color="#a833d0"><strong>Peter's rock</strong></font></div></h3>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-7">Peter’s Rock is a valuable archaeological monument. During excavations, metal and ceramic objects of two cultures were found here: Itkul (V-III centuries BC) and Petrogrom (second half of the 1st millennium AD). As archaeologists have established, ancient people melted copper here in those ancient times. 
 <br>
 <br>11/03/18<strong><br></strong></p>
