--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,7 @@
                          <img src="assets/images/8-382x95.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://russiantrip.cf">russiantrip</a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/d">free web maker</a></section><section class="header1 cid-qPSxN3i6ia" id="header1-ly">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="header1 cid-qPSxN3i6ia" id="header1-ly">
 
     
 
