--- a/page4.html
+++ b/page4.html
@@ -43,7 +43,7 @@
                          <img src="assets/images/8-382x95.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://russiantrip.cf">russiantrip</a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/g">how to build a website</a></section><section class="header1 cid-qPSyRtjRAy" id="header1-m1">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="header1 cid-qPSyRtjRAy" id="header1-m1">
 
     
 
