--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                          <img src="assets/images/-tt-150x131.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://russiantrip.cf">russiantrip</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://russiantrip.cf">Russiantrip</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/f">simple website builder</a></section><section class="header1 cid-qPSvVGPpv2" id="header1-lx">
+<section class="engine"><a href="https://mobirise.me/t">free amp templates</a></section><section class="header1 cid-qPSvVGPpv2" id="header1-lx">
 
     
 
