create github pages

--- a/page1.html
+++ b/page1.html
@@ -45,17 +45,17 @@
                          <img src="assets/images/-tt-150x131.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://russiantrip.cf">Russiantrip</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-2" href="https://russiantrip.cf">Russiantrip</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="page6.html">ALL CHAPTERS</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="page1.html">ABOUT THIS PROJECT</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page6.html">ALL CHAPTERS</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page1.html">ABOUT THIS PROJECT</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">free html web templates</a></section><section class="header1 cid-qPMAb4szmQ" id="header1-l5">
+<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="header1 cid-qPMAb4szmQ" id="header1-l5">
 
     
 
