--- a/page5.html
+++ b/page5.html
@@ -45,11 +45,11 @@
                          <img src="assets/images/-tt-150x131.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-2" href="https://russiantrip.cf">Russiantrip</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-2" href="https://russiantrip.cf">Russiantrip</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="page6.html">ALL CHAPTERS</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="page1.html">ABOUT THIS PROJECT</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page6.html">ALL CHAPTERS</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="page1.html">ABOUT THIS PROJECT</a></li></ul>
             
         </div>
     </nav>
