create github pages

--- a/page1.html
+++ b/page1.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">free website builder</a></section><section class="header1 cid-qPMAb4szmQ" id="header1-l5">
+<section class="engine"><a href="https://mobirise.me/x">css templates</a></section><section class="header1 cid-qPMAb4szmQ" id="header1-l5">
 
     
 
@@ -167,6 +167,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-  </body>
+</body>
 </html>
