--- a/page3.html
+++ b/page3.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/d">website maker</a></section><section class="header1 cid-qPSyrP2I6O" id="header1-m0">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise review</a></section><section class="header1 cid-qPSyrP2I6O" id="header1-m0">
 
     
 
@@ -455,6 +455,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-  </body>
+</body>
 </html>
