--- a/page4.html
+++ b/page4.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="header1 cid-qPSyRtjRAy" id="header1-m1">
+<section class="engine"><a href="https://mobirise.me/t">free amp templates</a></section><section class="header1 cid-qPSyRtjRAy" id="header1-m1">
 
     
 
@@ -235,6 +235,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-  </body>
+</body>
 </html>
