--- a/page6.html
+++ b/page6.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="cid-qPM1Fw0ayq mbr-fullscreen" id="header2-km">
+<section class="engine"><a href="https://mobirise.me/o">free one page web templates</a></section><section class="cid-qPM1Fw0ayq mbr-fullscreen" id="header2-km">
 
     
 
@@ -123,6 +123,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-  </body>
+</body>
 </html>
